# sensor-station

./: .gitignore  AGENT.md  Doxyfile  Makefile  README.md  certificate_manager.d  certificates.h  main.d  mkdocs.yml  mqtt_manager.d  ota_manager.d  platformio.ini  pyproject.toml  web_server.d
docs/: .nav.yml  ETHERNET_TLS_LIMITATION.md  bidirectional-rf-migration.md  cc1312r-functional-test.md  cc1312r-rf-coordinator.md  dev-environment.md  esp32-s3-ota-firmware-updates.md  esp32-s3-ota-firware-updates.md  ethernet-tls-and-security.md  index.md  ld2450-mmwave-sensor.md  m5stack-unit-poe-p4-wifi-setup.md  mqtt-command-reference.md  mqtt-implementation-plan.md  sslclient-implementation-status.md  thermal-occupancy-counter.md  wifi-provisioning-implementation.md
docs/certs/: ca.crt  client.crt  client.key  server.crt
docs/development/: cc1310-config-packet-model.md  cc1310-version-and-sensor-type-reporting.md  cc1312r-functional-test.md  cc1312r-rf-coordinator.md  cc1312r-spi-interaction.md  cc1312r-uart-to-spi-migration.md  pirw-cc1310-migration-checklist.md  pirw-new-node-migration.md  pirw-phase-1-behavior-capture.md  pirw-phase-2-cc1312-team-handoff.md  (+1 more)
scripts/: build-docs.sh  open-docs.sh
src/: cc1312_manager.h  certificate_manager.cpp  certificate_manager.h  certs.h  ld2450_sensor.h  log.h  main.cpp  mdns_ethernet.cpp  mdns_ethernet.h  mqtt_manager.cpp  mqtt_manager.h  network.cpp  network.h  ota_manager.cpp  ota_manager.h  performance_metrics.cpp  performance_metrics.h  thermal_detector.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
(+6 files in other folders)
