[project]
name = "sensor-mqtt-people-counter-docs"
version = "0.1.0"
description = "Documentation toolchain for the sensor-to-MQTT people counting firmware project"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocs-awesome-nav>=3.0,<4.0",
]

[tool.uv]
default-groups = ["docs"]
